Naughty commit to master that fixes missing top padding on comment blocks on smaller breakpoints

--- a/ArticleTemplates/css/scss/partials/_discussion.scss
+++ b/ArticleTemplates/css/scss/partials/_discussion.scss
@@ -4,11 +4,14 @@
 	background-color: white;
 	border-top: 1px solid $headline;
 	@include margin(1, 0, 0, 0);
-	@include padding(0, 1, 1, 1);
+	@include padding(1);
 	overflow: hidden;
 	@include mq($to: col1) {
 		margin: $base-1 / 1.5 $base-1 / 1.5 0 $base-1 / 1.5;
 		display: block;
+	}
+	@include mq($from: col2) {
+		padding-top: 0;
 	}
 
 	.discussion__container {
