--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -547,7 +547,7 @@ ul.tabs {
   background-color: white;
   border-top: 1px solid #333333;
   margin: 12px 0px 0px 0px;
-  padding: 0px 12px 12px 12px;
+  padding: 12px 12px 12px 12px;
   overflow: hidden; }
   @media all and (max-width: 40.615em) {
     .discussion {
@@ -561,6 +561,9 @@ ul.tabs {
     .discussion {
       margin: 2.89855% 2.89855% 0 2.89855%;
       display: block; } }
+  @media all and (min-width: 40.625em) {
+    .discussion {
+      padding-top: 0; } }
   .discussion .discussion__container {
     min-height: 64px;
     position: relative; }
